Translated strings for <!-- Files -->

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -160,74 +160,74 @@
     <string name="template_description_libgdx">Проект игры LibGDX. Выводит изображение на экран в качестве примера.</string>
 
     <!-- Files -->
-    <string name="save">Save</string>
-    <string name="show_files">Files</string>
-    <string name="menu_find">Find</string>
-    <string name="menu_find_file">Find in file</string>
-    <string name="menu_find_project">Find in project</string>
-    <string name="msg_search_modules">Search in modules</string>
-    <string name="msg_no_modules">No modules found in project</string>
-    <string name="hint_find_project_filter">Filter file extensions (optional)</string>
-    <string name="msg_find_project_filter">Separated by \'|\'</string>
-    <string name="msg_empty_search_query">Please enter text</string>
-    <string name="msg_select_search_modules">Select modules to search</string>
-    <string name="msg_searching_project">Finding in project, please wait&#8230;</string>
-    <string name="view_search_results">Search results</string>
-    <string name="copying_files">Copying files</string>
-    <string name="writing_files">Writing files</string>
-    <string name="copying_assets">Copying assets</string>
-    <string name="failed_create_project_dir">Failed to create project dir!</string>
-    <string name="failed_write_file">Failed to write file: %s</string>
-    <string name="asset_copy_failed">Failed to copy template to storage!</string>
-    <string name="cannot_create_temp">Failed to create temporary project directory!</string>
-    <string name="project_created_successfully">Project created successfully!</string>
-    <string name="msg_begin_project_write">Starting writing process</string>
-    <string name="msg_folder_creation_failed">Failed to create folder!</string>
-    <string name="msg_file_creation_failed">Failed to create file!</string>
-    <string name="msg_folder_created">Folder created successfully!</string>
-    <string name="msg_file_created">File created successfully!</string>
-    <string name="msg_folder_exists">Folder already exists!</string>
-    <string name="msg_file_exists">File already exists!</string>
-    <string name="msg_invalid_name">Invalid Name!</string>
-    <string name="text_create">Create</string>
-    <string name="msg_can_contain_slashes">If the path contains File separator (\'/\'), then the required (parent) directories will be created if they don\'t exist.</string>
-    <string name="folder_name">Folder Name</string>
-    <string name="file_name">File Name</string>
-    <string name="new_name">New name</string>
-    <string name="new_file">New file</string>
-    <string name="new_java_class">New Java class</string>
-    <string name="new_xml_resource">New XML resource</string>
-    <string name="new_folder">New folder</string>
-    <string name="title_confirm_delete">Confirm delete</string>
-    <string name="msg_confirm_delete">Are you sure you want to delete:\n%s?</string>
-    <string name="copied">Copied successfully!</string>
-    <string name="msg_rename_file">Enter new name for file/folder.</string>
-    <string name="renamed">Renamed successfully!</string>
-    <string name="rename_failed">Unable to rename file!</string>
-    <string name="deleted">Deleted successfully!</string>
-    <string name="delete_failed">Unable to delete file!</string>
-    <string name="copy_path">Copy path</string>
-    <string name="rename_file">Rename</string>
-    <string name="delete_file">Delete</string>
-    <string name="file_options">File options</string>
-    <string name="action_closeAll">Close all</string>
-    <string name="action_closeOthers">Close others</string>
-    <string name="action_closeThis">Close this</string>
-    <string name="all_saved">All files saved!</string>
-    <string name="msg_newfile_dest">Destination: %s/</string>
-    <string name="restype_drawable">Drawable</string>
-    <string name="restype_layout">Layout</string>
-    <string name="restype_menu">Menu</string>
-    <string name="restype_other">Other</string>
-    <string name="classtype_class">Class</string>
-    <string name="classtype_activity">Activity</string>
-    <string name="classtype_interface">Interface</string>
-    <string name="classtype_enum">Enum</string>
-    <string name="msg_checking_storage_permissions">Checking storage permissions</string>
-    <string name="msg_failed_list_files">Failed to list project files!</string>
-    <string name="msg_failed_save">Failed to save files!</string>
-    <string name="msg_storage_denied">Can\'t proceed without storage permissions</string>
-    <string name="msg_storage_granted">Storage permissions granted!</string>
+    <string name="save">Сохранить</string>
+    <string name="show_files">Файлы</string>
+    <string name="menu_find">Найти</string>
+    <string name="menu_find_file">Найти в файле</string>
+    <string name="menu_find_project">Найти в проекте</string>
+    <string name="msg_search_modules">Искать в модулях</string>
+    <string name="msg_no_modules">Модулей в проекте не найдено</string>
+    <string name="hint_find_project_filter">Фильтровать файлы по расширению (необязательно)</string>
+    <string name="msg_find_project_filter">Рзделены при помощи \'|\'</string>
+    <string name="msg_empty_search_query">Пожалуйста, введите текст</string>
+    <string name="msg_select_search_modules">Выберите модули для поиска</string>
+    <string name="msg_searching_project">Поиск в проекте, пожалуйста, подождите&#8230;</string>
+    <string name="view_search_results">Результаты поиска</string>
+    <string name="copying_files">Копирование файлов</string>
+    <string name="writing_files">Запись файлов</string>
+    <string name="copying_assets">Копирование ассетов</string>
+    <string name="failed_create_project_dir">Не удалось создать директорию проекта!</string>
+    <string name="failed_write_file">Не удалось записать файл: %s</string>
+    <string name="asset_copy_failed">Ошибка копирования проекта в память!</string>
+    <string name="cannot_create_temp">Не удалось создать временную директорию проекта!</string>
+    <string name="project_created_successfully">Проект создан успешно!</string>
+    <string name="msg_begin_project_write">Запуск процесса записи</string>
+    <string name="msg_folder_creation_failed">Не удалось создать папку!</string>
+    <string name="msg_file_creation_failed">Не удалось создать файл!</string>
+    <string name="msg_folder_created">Папка создана успешно!</string>
+    <string name="msg_file_created">Файл создан успешно!</string>
+    <string name="msg_folder_exists">Папка уже существует!</string>
+    <string name="msg_file_exists">Файл уже существует!</string>
+    <string name="msg_invalid_name">Неподходящее имя!</string>
+    <string name="text_create">Создать</string>
+    <string name="msg_can_contain_slashes">Если путь содержит разделительные символы (\'/\'), необходимые (родительские) директории будут созданы, если их ещё не существует.</string>
+    <string name="folder_name">Имя Папки</string>
+    <string name="file_name">Имя Файла</string>
+    <string name="new_name">Новое имя</string>
+    <string name="new_file">Новый файл</string>
+    <string name="new_java_class">Новый Java класс</string>
+    <string name="new_xml_resource">Новый ресурс XML</string>
+    <string name="new_folder">Новая Папка</string>
+    <string name="title_confirm_delete">Подтвердите Удаление</string>
+    <string name="msg_confirm_delete">Уверены, что хотите удалить:\n%s?</string>
+    <string name="copied">Успешно скопировано!</string>
+    <string name="msg_rename_file">Введите новое имя файла/папки.</string>
+    <string name="renamed">Успешно переименовано!</string>
+    <string name="rename_failed">Невозможно переименовать файл!</string>
+    <string name="deleted">Успешно удалено!</string>
+    <string name="delete_failed">Невозможно удалить файл!</string>
+    <string name="copy_path">Копировать путь</string>
+    <string name="rename_file">Переименовать</string>
+    <string name="delete_file">Удалить</string>
+    <string name="file_options">Опции файла</string>
+    <string name="action_closeAll">Закрыть все</string>
+    <string name="action_closeOthers">Закрыть остальные</string>
+    <string name="action_closeThis">Закрыть этот</string>
+    <string name="all_saved">Все файлы сохранены!</string>
+    <string name="msg_newfile_dest">Назначение: %s/</string>
+    <string name="restype_drawable">Рисунок</string>
+    <string name="restype_layout">Разметка</string>
+    <string name="restype_menu">Меню</string>
+    <string name="restype_other">Другое</string>
+    <string name="classtype_class">Класс</string>
+    <string name="classtype_activity">Активность</string>
+    <string name="classtype_interface">Интерфейс</string>
+    <string name="classtype_enum">Перечисление (Enum)</string>
+    <string name="msg_checking_storage_permissions">Проверка разрешений на взаимодействие с памятью</string>
+    <string name="msg_failed_list_files">Не удалось получить список проектов!</string>
+    <string name="msg_failed_save">Не удалось сохранить файлы!</string>
+    <string name="msg_storage_denied">Невозможно без разрешения на взаимодействие с памятью</string>
+    <string name="msg_storage_granted">Разрешение на взаимодействие получено!</string>
 
     <!-- Code Editor -->
     <string name="undo">Undo</string>
